--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ run
 
 # Files from Forge MDK
 forge*changelog.txt
+src/main/resources/assets/kubejs/textures/gui/gameboy_gui_*.png
+src/main/resources/assets/kubejs/rom/*
