--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ license=MIT
 
 # Versions
 minecraft_version=1.18.2
-forge_version=40.1.0
+forge_version=40.1.2
 forge_min_version=40
 mixin_version=0.8.5
 
@@ -24,8 +24,10 @@ mappings_channel=parchment
 mappings_version=2022.03.13
 
 # Mod dependencies
+calemieconomy_version=1.0.0
 create_version=mc1.18.2_v0.4.1+110
 create_min_version=0.4.1
+curios_version=1.18.2-5.0.7.1
 kubejs_version=1802.5.3-build.467
 kubejs_min_version=1802.5.3-build.467
 openloader_min_version=12.0.1
