Crash fix for Cardinal Block

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -35,7 +35,7 @@ side = "BOTH"
 modId = "openloader"
 mandatory = true
 versionRange = "[${openloader_min_version},)"
-ordering = "BEFORE"
+ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.dingusprimeacm]]
