--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ run
 forge*changelog.txt
 src/main/resources/assets/kubejs/textures/gui/gameboy_gui_*.png
 src/main/resources/assets/kubejs/rom/*
+src/main/resources/assets/dingusprimeacm/rom/pkmonred.gbc
