--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ minecraft {
             workingDirectory project.file('run')
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            args "-mixin.config="+archivesBaseName+".mixins.json", "--stacktrace"
+            args "-mixin.config="+archivesBaseName+".mixins.json"
 
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
