--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ tasks.named('wrapper', Wrapper).configure {
 version = mod_version
 group = mod_group_id
 
+// Allow 400 errors.
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xmaxerrs" << "5000"
+    }
+}
+
 repositories {
 
     maven {
